# P16-Tools

./: .gitignore  CHANGELOG.md  README.md  index.html  memory.json  memory.schem  p16_tools.js  prog.json  prog.schem  prog.txt  prog1.txt  prog2.txt
.github/workflows/: pages.yml
assembly/: Cargo.toml
assembly/examples/: all.txt
assembly/src/: assembly.rs  assembly_grammar.lalrpop  compile.rs  datatypes.rs  lib.rs  main.rs  memory.rs  simulator.rs
examples/: ackermann.txt  constexpr.txt  display.txt  dodgy.txt  empty.txt  fibonacci.txt  fibonancii.txt  heap.txt  multiply.txt  stack.txt  tmp.txt  very_simple.txt
gui/: Cargo.toml  index.html
gui/src/: main.rs
gui/src/app/: assembly.rs  assembly_text_box.rs  external.rs  memory.rs  mod.rs  program_memory.rs  random_access_memory.rs  simulator.rs  state.rs
gui/src/app/simulator/: mod.rs  multithreaded.rs  singlethreaded.rs
p16/: p16_v1.0.schem  p16_v2.0.schem  p16_v2.1.schem  p16_v2.2.schem
redlang/: Cargo.toml
redlang/src/: main.rs
schematic/: main.py
schemgen/: Cargo.toml  example.schem  myexample.schem
schemgen/mcschem/: .gitignore  Cargo.toml  README.md
schemgen/mcschem/examples/: test.rs
schemgen/mcschem/src/: data_version.rs  lib.rs  utils.rs
schemgen/src/: lib.rs
