[package]
name = "assembly"
version = "0.0.1"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.0"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
serde_json = "1.0"
