[package]
name = "mcschem"
version = "0.1.1"
edition = "2021"
authors = ["funnsam"]
rust-version = "1.71.0"
description = "A crate for .schem files"
homepage = "https://github.com/funnsam/mcschem"
repository = "https://github.com/funnsam/mcschem"
documentation = "https://docs.rs/mcschem"
readme = "./README.md"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartz_nbt = "0.2.8"
